<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:background="@color/main_color">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:text="个人中心"-->
                <!--android:textColor="@color/black2"-->
                <!--android:textSize="18sp" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:orientation="horizontal"
            android:paddingBottom="60dp"
            android:paddingLeft="25dp"
            android:paddingTop="50dp">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user_head"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:civ_border_color="@color/white"
                    android:src="@mipmap/icon_user_head"
                    android:layout_gravity="center"
                    app:civ_border_width="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="登录/注册" />

                <TextView
                    android:id="@+id/tv_user_name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="ID:123456"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_downloads"
                app:setText="@string/item_name1"/>
            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_like"
                android:layout_marginLeft="10dp"
                app:setText="@string/item_name2"/>

            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_setting"
                android:layout_marginLeft="10dp"
                app:setText="@string/item_name3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp">

            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_feedback"
                app:setText="@string/item_name4"/>
            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_about"
                android:layout_marginLeft="10dp"
                app:setText="@string/item_name5"/>

            <com.yiyiba.photo.view.ItemView
                android:id="@+id/my_item6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:setIcon="@mipmap/icon_exit"
                android:layout_marginLeft="10dp"
                android:visibility="invisible"
                app:setText="@string/item_name6"/>
        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
